#80 - Hide JDK 10 illegal access warning
Spring Core 5.0.x causes illegal access warning on startup of bot.

See: https://github.com/dsyer/spring-boot-java-10#create-a-spring-boot-application

Will remove this patch when Spring Boot 2.1.0 released.